test/files/neg/t6595.check
t6595.scala:5: error: early initializers are no longer supported; use trait parameters instead
class Foo extends {
                  ^
t6595.scala:7: error: ';' expected but 'with' found.
} with AnyRef {
  ^
two errors found
